Added feature to edit blog post from frontend.

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?Tangerine:bold,bolditalic|Inconsolata:italic|Droid+Sans" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <script src="https://kit.fontawesome.com/75107dcb9f.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="page-header">
