--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,6 +8,8 @@
             </div>
         {% endif %}
 
+       <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit"></i></a>
+
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
    </div>
