--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -39,6 +39,13 @@ h1, h2, h3, h4 {
     float: right;
 }
 
-.fas fa-edit a {
+.top-menu, .top-menu:hover {
+    color: #ffffff;
+    float: right;
+    font-size: 26pt;
+    margin-right: 20px;
+}
+
+.fa-edit::before {
     color: #212529;
 }
