--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,10 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?Tangerine:bold,bolditalic|Inconsolata:italic|Droid+Sans" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    <script src="https://kit.fontawesome.com/75107dcb9f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
 </head>
 <body>
 <div class="page-header">
+    {% if user.is_authenticated %}
+    <a href="{% url 'post_new' %}" class="top-menu"><i class="fas fa-plus-circle"></i></a>
+    {% endif %}
     <h1><a href="{% url "post_list" %}">Alfredo's Blog</a></h1>
 </div>
 
