--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,9 +7,9 @@
                 {{ post.published_date }}
             </div>
         {% endif %}
-
+   {% if user.is_authenticated %}
        <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit"></i></a>
-
+   {% endif %}
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
    </div>
