--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,8 +12,10 @@
 <body>
 <div class="page-header">
     {% if user.is_authenticated %}
+    <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="fab fa-firstdraft"></i></a>
     <a href="{% url 'post_new' %}" class="top-menu"><i class="fas fa-plus-circle"></i></a>
     {% endif %}
+
     <h1><a href="{% url "post_list" %}">Alfredo's Blog</a></h1>
 </div>
 
