--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,6 +6,8 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
+        {% else %}
+        <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-primary">Publish</a>
         {% endif %}
    {% if user.is_authenticated %}
        <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit"></i></a>
