--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,7 @@
 {% extends 'blog/base.html' %}
+
+{% block title %}Alfredo's blog{% endblock %}
+
 {% block content %}
     {% for post in posts %}
         <div class="post">
