--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,6 +15,7 @@
         <a href="{% url 'logout' %}" class="top-menu"><i class="fas fa-sign-out-alt"></i></a>
         <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="fab fa-firstdraft"></i></a>
         <a href="{% url 'post_new' %}" class="top-menu"><i class="fas fa-plus-circle"></i></a>
+        <p class="top-menu">Hello, {{ user.username }}</p>
 
     {% else %}
         <a href="{% url 'login' %}" class="top-menu"><i class="fas fa-sign-in-alt"></i></a>
