Add feature to comment on blog post

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,7 +22,7 @@
 
     {% endif %}
 
-    <h1><a href="{% url "post_list" %}">Alfredo's Blog</a></h1>
+    <h1><a href="{% url 'post_list' %}">Alfredo's Blog</a></h1>
 </div>
 
 <div class="content container">
