--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,20 +4,36 @@
 
 {% block content %}
    <div class="post">
-
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
             </div>
         {% else %}
-        <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-primary">Publish</a>
+            <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-primary">Publish</a>
         {% endif %}
-   {% if user.is_authenticated %}
-       <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit"></i></a>
-   {% endif %}
+        {% if user.is_authenticated %}
+            <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit"></i></a>
+        {% endif %}
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
    </div>
+
+    <hr>
+    <a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-secondary">Add comment</a>
+    {% for comment in post.comments.all %}
+        <div class="comment">
+            <div class="date">
+                {{ comment.created_date }}
+            </div>
+            <strong>{{ comment.author }}</strong>
+            <p>{{ comment.text }}</p>
+        </div>
+    {% empty %}
+    <div class="comment">
+        <p>No comments yet...</p>
+    </div>
+
+    {% endfor %}
 {% endblock %}
 
 
