--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load markdownify %}
 
 {% block title %}{{ post.title }}{% endblock %}
 
@@ -15,7 +16,7 @@
             <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit"></i></a>
         {% endif %}
         <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <p>{{ post.text| markdown | safe }}</p>
    </div>
 
     <hr>
@@ -33,7 +34,7 @@
             {% endif %}
 
             <strong>{{ comment.author }}</strong>
-            <p>{{ comment.text }}</p>
+            <p>{{ comment.text | markdown | safe | linebreaksbr}}</p>
         </div>
         {% endif %}
     {% empty %}
