--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,6 +15,10 @@
         {% if user.is_authenticated %}
             <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit"></i></a>
         {% endif %}
+       <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-danger"
+          onclick="return confirm('Are you sure you want to delete this post?')"><i class="fas fa-trash-alt"></i></a>
+       
+       
         <h1>{{ post.title }}</h1>
         <p>{{ post.text| markdown | safe }}</p>
    </div>
